Fixing Path issues

--- a/products/index.html
+++ b/products/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="nav-items">
                     <ul class="flex flex-row text-gray-600">
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="../about.html"><span
+                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="../index.html"><span
                                     class="material-icons">
                                     home
                                 </span><span class="mx-1 link-text">Home</span></a></li>
@@ -33,9 +33,9 @@
                                 <span class="mx-1 link-text">Products
                                     &#9660;</span></a>
                             <ul id="product-list" class="bg-blue-100 p-2 hidden">
-                                <li class="product"><a href="products/DIY/index.html">DIY
+                                <li class="product"><a href="DIY/index.html">DIY
                                         Kit</a></li>
-                                <li class="product"><a href="products/Assembled/index.html">Assembled Kit</a></li>
+                                <li class="product"><a href="Assembled/index.html">Assembled Kit</a></li>
                             </ul>
                         </li>
 
