--- a/products/index.html
+++ b/products/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="w-full bg-blue-100">
             <div class="flex flex-row justify-between p-6">
-                <div class="icon"><a class="flex flex-row" href="/index.html"><img
+                <div class="icon"><a class="flex flex-row" href="../index.html"><img
                             src="https://via.placeholder.com/25x25" alt="placeholder"><span
                             class="mx-2">Luminate</span></a>
                 </div>
@@ -30,29 +30,29 @@
                         </button>
                     </div>
                     <ul class="flex flex-row text-gray-600 hide-nav" id="nav-item-list-container">
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="/index.html"><span
+                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="../index.html"><span
                                     class="material-icons">
                                     home
                                 </span><span class="mx-1 link-text">Home</span></a></li>
                         <li class="px-4 nav-link" id="product-link"><a class="hover:text-black flex"
-                                href="/products/index.html"><span class="material-icons">
+                                href="index.html"><span class="material-icons">
                                     category
                                 </span>
                                 <span class="mx-1 link-text">Products
                                     &#9660;</span></a>
                             <ul id="product-list" class="bg-blue-100 p-2 hidden">
-                                <li class="product"><a href="/products/DIY/index.html">DIY
+                                <li class="product"><a href="DIY/index.html">DIY
                                         Kit</a></li>
-                                <li class="product"><a href="/products/Assembled/index.html">Assembled Kit</a></li>
+                                <li class="product"><a href="Assembled/index.html">Assembled Kit</a></li>
                             </ul>
                         </li>
 
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="/about.html"><span
+                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="../about.html"><span
                                     class="material-icons">
                                     description
                                 </span>
                                 <span class="mx-1 link-text">About</span></a></li>
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="/contact.html"><span
+                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="../contact.html"><span
                                     class="material-icons">
                                     contact_page
                                 </span><span class="mx-1 link-text">Contact</span></a></li>
@@ -81,7 +81,7 @@
                     <div class="w-3/4 m-auto" id="card-container-parent">
                         <ul class="flex flex-row justify-between align-middle p-4 gap-2 w-full" id="card-container">
                             <li class="p-4 m-2 product-item w-1/2">
-                                <a class="flex flex-col" href="/products/DIY/index.html">
+                                <a class="flex flex-col" href="DIY/index.html">
                                     <img src="https://picsum.photos/150/150" alt="placeholder">
                                     <div>
                                         <span class="text-center text-xl m-4 p-2">DIY Kit</span>
@@ -95,7 +95,7 @@
                                 </a>
                             </li>
                             <li class="p-4 m-2 product-item w-1/2">
-                                <a class="flex flex-col" href="/products/Assembled/index.html">
+                                <a class="flex flex-col" href="Assembled/index.html">
                                     <img src="https://picsum.photos/150/150" alt="placeholder">
                                     <div>
                                         <span class="text-center text-xl m-4 p-2">Assembled Kit</span>
