Fixed animation overflow and nav links

--- a/about.html
+++ b/about.html
@@ -49,12 +49,12 @@
                             </ul>
                         </li>
 
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="/about.html"><span
+                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="about.html"><span
                                     class="material-icons">
                                     description
                                 </span>
                                 <span class="mx-1 link-text">About</span></a></li>
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="/contact.html"><span
+                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="contact.html"><span
                                     class="material-icons">
                                     contact_page
                                 </span><span class="mx-1 link-text">Contact</span></a></li>
