Added Product Information on each page

--- a/products/Assembled/index.html
+++ b/products/Assembled/index.html
@@ -62,8 +62,46 @@
         </nav>
     </header>
     <main>
-        <h2>Assembled Kit Page</h2>
-        <p>This page is under construction</p>
+        <div class="w-full border-b-2 border-solid">
+            <div class="m-4  ">
+                <h1 class="text-4xl p-4 uppercase">Assembled Kit</h1>
+            </div>
+        </div>
+        <div class="product-container flex flex-row p-8 m-auto gap-1 border-b-2 ">
+            <div class="image-container w-1/2">
+                <img class="m-auto" src="https://picsum.photos/400" alt="placeholder">
+            </div>
+            <div class="product-info w-1/2 p-4">
+                <div class="product-description">
+                    <h3 class="text-xl">Product Description</h3>
+                    <p class="px-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni iure minima aut
+                        atque
+                        eaque et nobis,
+                        eius a quos, totam ex consequatur blanditiis deserunt optio accusantium? Quaerat possimus veniam
+                        error.
+                    </p>
+                </div>
+                <div class="product-price my-2">
+                    <div class="flex flex-end">
+                        <p class="px-4 text-lg">
+                            $299.99
+                        </p>
+                        <p class="px-4 text-sm">
+                            (Shipping Included)
+                        </p>
+                    </div>
+                    <div class="product-buttons flex flex-col justify-end my-20">
+                        <!-- buttons to buy and add to cart -->
+                        <button class="hover:bg-blue-500 hover:text-white text-blue-500 font-bold py-2 px-4 rounded">
+                            Add to Cart
+                        </button>
+                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+                            Buy Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
