--- a/about.html
+++ b/about.html
@@ -2,70 +2,74 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Luminate</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
+        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <script src="show_faq.js" defer></script>
-    <script src="app.js" defer></script>
-    <script src="show_nav.js" defer></script>
-    <title>Home Page</title>
+    <script src="main.js" defer></script>
 </head>
 
-<body>
-    <!-- Header Portion -->
-    <header>
-        <nav class="w-full bg-blue-100">
-            <div class="flex flex-row justify-between p-6">
-                <div class="icon"><a class="flex flex-row" href="index.html"><img
-                            src="https://via.placeholder.com/25x25" alt="placeholder"><span
-                            class="mx-2">Luminate</span></a>
-                </div>
-                <div class="nav-items">
-                    <div id="nav-mobile-button-container" class="hidden">
-                        <button id="nav-button">
-                            <span class="material-icons">
-                                menu
-                            </span>
-                        </button>
-                    </div>
-                    <ul class="flex flex-row text-gray-600 hide-nav" id="nav-item-list-container">
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="index.html"><span
-                                    class="material-icons">
-                                    home
-                                </span><span class="mx-1 link-text">Home</span></a></li>
-                        <li class="px-4 nav-link" id="product-link"><a class="hover:text-black flex"
-                                href="products/index.html"><span class="material-icons">
-                                    category
-                                </span>
-                                <span class="mx-1 link-text">Products
-                                    &#9660;</span></a>
-                            <ul id="product-list" class="bg-blue-100 p-2 hidden">
-                                <li class="product"><a href="products/DIY/index.html">DIY
-                                        Kit</a></li>
-                                <li class="product"><a href="products/Assembled/index.html">Assembled Kit</a></li>
-                            </ul>
-                        </li>
+<body class="light">
+    <!--Header-->
+    <header class="">
 
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="about.html"><span
-                                    class="material-icons">
-                                    description
-                                </span>
-                                <span class="mx-1 link-text">About</span></a></li>
-                        <li class="px-4 nav-link"><a class="hover:text-black flex" href="contact.html"><span
-                                    class="material-icons">
-                                    contact_page
-                                </span><span class="mx-1 link-text">Contact</span></a></li>
-                    </ul>
+        <nav class="navbar navbar-light">
+            <div class="brand">
+                <a class="navbar-brand" href="index.html">
+                    <img src="https://via.placeholder.com/25x25" alt="" loading=" lazy">
+                    <span>Luminate</span>
+                </a>
+            </div>
+
+            <div class="navigation-container">
+                <div class="mobile-button-container">
+                    <button class="nav-button">
+                        <div class="nav-button-line " id="line-one"></div>
+                        <div class="nav-button-line" id="line-two"></div>
+                        <div class="nav-button-line" id="line-three"></div>
+                    </button>
                 </div>
+
+                <ul class="nav-tabs">
+
+                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item products"><a href="products/index.html" class="nav-link">Products&#9660;</a>
+                        <ul class="sub-nav-menu">
+                            <li class="nav-item">
+                                <a href="products/diy.html" class="nav-link">DIY Kit
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="products/assembled.html" class="nav-link">Assembled Kit
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                </ul>
             </div>
         </nav>
     </header>
-    <!-- Main Portion -->
+
+    <!--Main-->
     <main>
-        <div class="w-full" id="body-container">
+        <div id="body-container">
             <div class="body-layer-1" id="background-circle-container">
                 <div class="background-circle" id="circle-one"></div>
                 <div class="background-circle" id="circle-two"></div>
@@ -75,103 +79,93 @@
                 <div class="background-circle" id="circle-six"></div>
                 <div class="background-circle" id="circle-seven"></div>
                 <div class="background-circle" id="circle-eight"></div>
-
             </div>
             <div class="body-layer-2" id="foreground-container">
                 <div>
-                    <h1 class="text-5xl text-center">Luminate</h1>
-                    <h6 class="text-center">The best way to light up your life</h6>
+                    <h1 class="heading">Luminate</h1>
+                    <h6 class="heading-small">The best way to light up your life</h6>
                 </div>
-                <div id="faq-container" class="flex flex-col justify-center align-middle mx-auto w-2/3">
-                    <h2 class=" text-3xl text-center">Frequently Asked Questions</h2>
-                    <div class="p-6">
-                        <div>
-                            <h3 class="text-2xl flex flex-row justify-between"><span>Q. What is Luminate?</span><span
-                                    class="mx-2 dropdown-arrow">&#9660;</span></h3>
-                            <p class="text-lg hidden">A. Luminate is a company that sells LED light kits for your home.
-                                We have
-                                a
-                                variety of
-                                products that you can choose from. We also have a DIY kit that you can assemble
-                                yourself.
-                            </p>
+                <div class="foreground-content">
+                    <div class="faq-container">
+                        <div class="faq-title">
+                            <h2>Frequently Asked Questions</h2>
                         </div>
-                        <div>
-                            <h3 class="text-2xl flex flex-row justify-between"><span>Q. What is the difference between
-                                    the DIY and
-                                    Assembled kits?</span><span class="mx-2 dropdown-arrow">&#9660;</span></h3>
-                            <p class="text-lg hidden">A. The DIY kit is a kit that you can assemble yourself. The
-                                Assembled
-                                kit is a kit that is already assembled and ready to use.</p>
-                        </div>
-                        <div>
-                            <h3 class="text-2xl flex flex-row justify-between"><span>Q. How do I assemble the DIY
-                                    kit?</span><span class="mx-2 dropdown-arrow">&#9660;</span></h3>
-                            <p class="text-lg hidden">A. The DIY kit comes with a manual that will guide you through the
-                                process
-                                of
-                                assembling the kit.</p>
-                        </div>
-                        <div>
-                            <h3 class="text-2xl flex flex-row justify-between"><span>Q. How do I install the Assembled
-                                    kit?</span><span class="mx-2 dropdown-arrow">&#9660;</span>
-                            </h3>
-                            <p class="text-lg hidden">A. The Assembled kit comes with a manual that will guide you
-                                through
-                                the
-                                process
-                                of
-                                installing the kit.</p>
-                        </div>
-                        <div>
-                            <h3 class="text-2xl flex flex-row justify-between"><span>Q. How do I contact
-                                    you?</span><span class="mx-2 dropdown-arrow">&#9660;</span></h3>
-                            <p class="text-lg hidden">A. You can contact us by clicking on the Contact link in the
-                                navigation
-                                bar
-                                or
-                                by
-                                clicking <a href="/contact.html">here</a>.</p>
+                        <div class="faq-content">
+                            <ul>
+                                <li>
+                                    <h4>What is Luminate?</h4>
+                                    <p>Luminate is an Ambient or Bias lighting solution for Televisions or Monitors. Our
+                                        products elevate the viewing experience by providing realtime lighting changes
+                                        in your environment based on what you are watching</p>
+                                </li>
+                                <li>
+                                    <h4>What is the difference between the DIY Kit and the Assembled Kit?</h4>
+                                    <table>
+                                        <tr>
+                                            <th>DIY Kit</th>
+                                            <th>Assembled Kit</th>
+                                        </tr>
+                                        <tr>
+                                            <td>Requires assembly</td>
+                                            <td>Comes fully assembled</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Less expensive</td>
+                                            <td>More expensive</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Requires soldering</td>
+                                            <td>Does not require soldering</td>
+                                        </tr>
+                                    </table>
+                                </li>
+                                <li>
+                                    <h4>How do I assemble the DIY Kit?</h4>
+                                    <p>Follow the instructions in the included manual. We also have a YouTube channel
+                                        with videos showing step by step instructions</p>
+                                </li>
+                                <li>
+                                    <h4>How do I assemble the Assembled Kit?</h4>
+                                    <p>The Assembled Kit comes assembled for you. To use it, see the installation steps
+                                        included in the manual.</p>
+                                </li>
+                                <li>
+                                    <h4>How do I contact you?</h4>
+                                    <p>You can contact us by visiting the <a href="contact.html">Contact</a> page.</p>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                </div>
-                <div id="about-container" class="flex flex-col justify-center align-middle mx-auto w-1/3">
-                    <h2 class="text-3xl text-center">About Us</h2>
-                    <div class="p-6">
-                        <p class="text-lg hide">Luminate is a company that sells LED light kits for your home. We have a
-                            variety of
-                            products that you can choose from. We also have a DIY kit that you can assemble yourself.
-                        </p>
-                        <p class="text-lg hide">
-                            We are a small company that is based in the United States. We are a family owned business
-                            that
-                            started
-                            in
-                            2019. We have been selling our products since then and have been growing ever since.
-                        </p>
-                        <p class="text-lg hide">
-                            The LED lights we sell are great for ambient or bias lighting for televisions, computers, or
-                            any
-                            other device that you want to light up. They are also great for lighting up your bedroom,
-                            living room, or your car.
-                        </p>
+
+                    <div class="about-container">
+                        <div class="about-title">
+                            <h2>About</h2>
+                        </div>
+                        <div class="about-content">
+                            <p>Luminate is a small company based in the United States. We are dedicated to providing
+                                the best Ambient or Bias lighting solutions for your TV or Monitor. We are a small
+                                company, but we are dedicated to providing the best products and customer service
+                                possible.</p>
+
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </main>
 
-    <!-- Footer Portion -->
+    <!--Footer-->
     <footer>
-        <div class="w-full h-16 bg-blue-100 flex flex-row justify-center">
-            <div class="m-2">
-                <svg class="w-6 h-6 text-blue-600 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <div class="footer">
+            <div class="footer-icon">
+                <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path
                         d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
                 </svg>
             </div>
-            <div class="m-2">
-                <svg class="w-6 h-6 text-pink-600 fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <div class="footer-icon">
+                <svg class="svg-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.162-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.401.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.354-.629-2.758-1.379l-.749 2.848c-.269 1.045-1.004 2.352-1.498 3.146 1.123.345 2.306.535 3.55.535 6.607 0 11.985-5.365 11.985-11.987C23.97 5.39 18.592.026 11.985.026L12.017 0z" />
                 </svg>
