Adding Logos and Images

--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luminate</title>
+    <link rel="icon" type="image/x-icon" href="./images/logo-no-background.png">
+    <title>Luminate: About Us</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified CSS -->
@@ -31,7 +32,7 @@
         <nav class="navbar navbar-light">
             <div class="brand">
                 <a class="navbar-brand" href="index.html">
-                    <img src="https://via.placeholder.com/25x25" alt="" loading=" lazy">
+                    <img src="./images/logo-white.png" alt="logo" loading=" lazy">
                     <span>Luminate</span>
                 </a>
             </div>
