--- a/products/index.html
+++ b/products/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Products</title>
+    <link rel="icon" type="image/x-icon" href="../images/logo-no-background.png">
+    <title>Luminate: All Products</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified CSS -->
@@ -31,7 +32,7 @@
         <nav class="navbar navbar-light">
             <div class="brand">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="https://via.placeholder.com/25x25" alt="" loading=" lazy">
+                    <img src="../images/logo-white.png" alt="logo" loading=" lazy">
                     <span>Luminate</span>
                 </a>
             </div>
@@ -78,7 +79,7 @@
             <div class="row">
                 <div class="col-md-4 card-container">
                     <div class="card product-card">
-                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
+                        <img src="../images/diy.jpg" class="card-img-top" alt="DIY Kit">
                         <div class="card-body">
                             <h5 class="card-title">DIY Kit</h5>
                             <p class="card-text">Our DIY Kit comes with all the necessary materials for you to assembled
@@ -91,7 +92,7 @@
                 </div>
                 <div class="col-md-4 card-container">
                     <div class="card product-card">
-                        <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
+                        <img src="../images/assembled.jpg" class="card-img-top" alt="Assembled Kit">
                         <div class="card-body">
                             <h5 class="card-title">Assembled Kit</h5>
                             <p class="card-text">Our Assembled Kit is fully assembled and ready to install. There is no
