Adding Alt tags

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="foreground-content">
                     <div class="" id="img-container-parent">
                         <div class="img-container">
-                            <img src="./images/home_screen.jpg" width="600px" alt="placeholder">
+                            <img src="./images/home_screen.jpg" width="600px" alt="Bias Lighting">
                         </div>
                     </div>
                     <div class="" id="welcome-paragraph-container">
