--- a/products/diy.html
+++ b/products/diy.html
@@ -76,7 +76,7 @@
             </div>
             <div class="product">
                 <div class="product-image">
-                    <img src="../images/diy.jpg" alt="" loading="lazy">
+                    <img src="../images/diy.jpg" alt="DIY Kit" loading="lazy">
                 </div>
                 <!--Bootstrap Product information-->
                 <div class="product-info">
